--- a/mobile/app.json
+++ b/mobile/app.json
@@ -13,14 +13,35 @@
         "BLUETOOTH_ADMIN",
         "BLUETOOTH_SCAN",
         "BLUETOOTH_CONNECT",
-        "ACCESS_FINE_LOCATION"
-      ]
+        "ACCESS_FINE_LOCATION",
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_BACKGROUND_LOCATION",
+        "INTERNET",
+        "ACCESS_NETWORK_STATE",
+        "POST_NOTIFICATIONS",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.BLUETOOTH",
+        "android.permission.BLUETOOTH_ADMIN",
+        "android.permission.BLUETOOTH_CONNECT"
+      ],
+      "config": {
+        "googleMaps": {
+          "apiKey": "GOOGLE_MAPS_API_KEY"
+        }
+      }
     },
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.farm.animaltracker",
       "infoPlist": {
-        "NSBluetoothAlwaysUsageDescription": "This app needs Bluetooth access to detect nearby animals with BLE trackers."
+        "NSBluetoothAlwaysUsageDescription": "This app needs Bluetooth access to detect nearby animals with BLE trackers.",
+        "NSLocationWhenInUseUsageDescription": "Allow Animal Tracker to access your location for GPS tracking.",
+        "NSLocationAlwaysUsageDescription": "Allow Animal Tracker to access your location for GPS tracking.",
+        "ITSAppUsesNonExemptEncryption": false
+      },
+      "config": {
+        "googleMapsApiKey": "GOOGLE_MAPS_API_KEY"
       }
     },
     "plugins": [
@@ -37,6 +58,12 @@
         }
       ],
       "react-native-ble-plx"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "2913e01c-a8f6-4fdd-baea-ab0ee4ad9ae5"
+      }
+    },
+    "owner": "qoriyow1233"
   }
 }
